--- a/events.html
+++ b/events.html
@@ -34,18 +34,19 @@
     </section>
   </main>
 
-  <footer>
-        <div class="footer-content">
+ <footer>
+  <div class="footer-content">
     <p>Connect with us:</p>
     <a href="https://www.facebook.com/login/" target="_blank">
-      <img src="facebooklogo.png" alt="Facebook Logo" class="social-icon" />
+      <img src="facebooklogo.png" alt="Facebook logo">
     </a>
-    <a href="https://twitter.com/login" target="_blank">
-      <img src="xlogo.png" alt="X Logo" class="social-icon" />
+    <a href="https://www.twitter.com/" target="_blank">
+      <img src="xlogo.png" alt="Twitter logo">
     </a>
-    <p>&copy; 2025 Sprout & Grow. All rights reserved.</p>
-        </div>
-  </footer>
+  </div>
+  <p>&copy; 2025 Sprout & Grow. All rights reserved.</p>
+</footer>
+
 
 </body>
 </html>
