--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
    <header>
   <a href="index.html">
-    <img src="sprout-grow-horizontal-524-transparent.png" alt="Sprout & Grow Logo" class="logo">
+    <img src="./sprout-grow-horizontal-524.png" alt="Sprout & Grow Logo" class="logo">
   </a>
   <nav>
     <ul>
