--- a/shop.html
+++ b/shop.html
@@ -10,8 +10,7 @@
 
  <header>
   <a href="index.html">
-    <img src="sprout-grow-horizontal-524-transparent.png" alt="Sprout & Grow Logo" class="logo">
-  </a>
+   <img src="./sprout-grow-horizontal-524.png" alt="Sprout & Grow Logo" class="logo">
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
